force-app/main/default/objects/POSAccountAliases__c/POSAccountAliases__c.object-meta.xml
<CustomObject>
    <description>Aliases for Accounts and how they show on POS</description>
    <label>POSAccountAlias</label>
    <nameField>
        <label>Name to Display</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POSAccountAliases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>