force-app/main/default/objects/POSAccountAliases__c/fields/Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Group__c</fullName>
    <description>used to group accounts like amazon</description>
    <label>Account Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>