force-app/main/default/objects/POSAccountAliases__c/fields/AliasUnique__c.field-meta.xml
<CustomField>
    <fullName>AliasUnique__c</fullName>
    <description>Checks if the Alias is already in use to prevent duplicate aliases in the system</description>
    <label>AliasUnique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>