force-app/main/default/objects/POSAccountAliases__c/fields/Assigned_Rep__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Rep__c</fullName>
    <label>Assigned Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>