force-app/main/default/objects/POSAccountAliases__c/fields/AV_Certified__c.field-meta.xml
<CustomField>
    <fullName>AV_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is account certified in AV and receives spiffs/rebates</description>
    <inlineHelpText>Is account certified in AV and receives spiffs/rebates</inlineHelpText>
    <label>AV Certified</label>
    <type>Checkbox</type>
</CustomField>