force-app/main/default/objects/POSAccountAliases__c/fields/AV_Certified_Formula__c.field-meta.xml
<CustomField>
    <fullName>AV_Certified_Formula__c</fullName>
    <formula>SFDC_Account__r.AV_Solutions_Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AV Certified Formula</label>
    <type>Checkbox</type>
</CustomField>