force-app/main/default/objects/POSAccountAliases__c/fields/AV_Var_Channel_Updated__c.field-meta.xml
<CustomField>
    <fullName>AV_Var_Channel_Updated__c</fullName>
    <formula>if (SFDC_Account__r.AV_VAR_Change__c  &gt;  Channel_Updated__c , SFDC_Account__r.AV_VAR_Change__c, 
if(Channel_Updated__c &gt; datevalue(CreatedDate) , Channel_Updated__c, datevalue(CreatedDate) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AV.Var.Channel Updated</label>
    <type>Date</type>
</CustomField>