force-app/main/default/objects/POSAccountAliases__c/fields/Channel_Updated__c.field-meta.xml
<CustomField>
    <fullName>Channel_Updated__c</fullName>
    <description>Date a change was made on the channel</description>
    <label>Channel Updated</label>
    <type>Date</type>
</CustomField>