force-app/main/default/objects/POSAccountAliases__c/fields/Commissions__c.field-meta.xml
<CustomField>
    <fullName>Commissions__c</fullName>
    <label>Commissions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>