force-app/main/default/objects/POSAccountAliases__c/fields/Consumer_Account__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumer Account</label>
    <type>Checkbox</type>
</CustomField>