force-app/main/default/objects/POSAccountAliases__c/fields/datTeamUpload__c.field-meta.xml
<CustomField>
    <fullName>datTeamUpload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if data team did a mass upload to map these accounts to POS names.</description>
    <label>datTeamUpload</label>
    <type>Checkbox</type>
</CustomField>