force-app/main/default/objects/POSAccountAliases__c/fields/DBA_s__c.field-meta.xml
<CustomField>
    <fullName>DBA_s__c</fullName>
    <label>DBA(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>