force-app/main/default/objects/POSAccountAliases__c/fields/Direct_Purchase_Reseller__c.field-meta.xml
<CustomField>
    <fullName>Direct_Purchase_Reseller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Direct only...</description>
    <label>Direct Purchase Reseller</label>
    <type>Checkbox</type>
</CustomField>