force-app/main/default/objects/POSAccountAliases__c/fields/Disti_Pro_AV_Director__c.field-meta.xml
<CustomField>
    <fullName>Disti_Pro_AV_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disti/Pro AV Director</label>
    <type>Checkbox</type>
</CustomField>