force-app/main/default/objects/POSAccountAliases__c/fields/DistributorAlias__c.field-meta.xml
<CustomField>
    <fullName>DistributorAlias__c</fullName>
    <label>Distributor Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>