force-app/main/default/objects/POSAccountAliases__c/fields/End_User_Alias__c.field-meta.xml
<CustomField>
    <fullName>End_User_Alias__c</fullName>
    <label>End User Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>