force-app/main/default/objects/POSAccountAliases__c/fields/EndUserFocus__c.field-meta.xml
<CustomField>
    <fullName>EndUserFocus__c</fullName>
    <formula>SFDC_Account__r.End_User_Focus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndUserFocus</label>
    <type>Checkbox</type>
</CustomField>