force-app/main/default/objects/POSAccountAliases__c/fields/FinchClub__c.field-meta.xml
<CustomField>
    <fullName>FinchClub__c</fullName>
    <formula>SFDC_Account__r.Contacts_in_Finch_Club__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FinchClub</label>
    <type>Checkbox</type>
</CustomField>