force-app/main/default/objects/POSAccountAliases__c/fields/FinchClubMembers__c.field-meta.xml
<CustomField>
    <fullName>FinchClubMembers__c</fullName>
    <formula>SFDC_Account__r.Finch_Club_Members__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FinchClubMembers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>