force-app/main/default/objects/POSAccountAliases__c/fields/Marketing_Firm__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Firm__c</fullName>
    <description>Name of marketing firm assigned to get business for account</description>
    <inlineHelpText>Name of marketing firm assigned to get business for account</inlineHelpText>
    <label>Marketing Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>