force-app/main/default/objects/POSAccountAliases__c/fields/National_Reporting__c.field-meta.xml
<CustomField>
    <fullName>National_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Reporting</label>
    <type>Checkbox</type>
</CustomField>