force-app/main/default/objects/POSAccountAliases__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>Name of the parent company</description>
    <inlineHelpText>Name of the parent company</inlineHelpText>
    <label>Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>