force-app/main/default/objects/POSAccountAliases__c/fields/Reporting_Parnter__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Parnter__c</fullName>
    <description>Full  or Partial</description>
    <label>Reporting Parnter Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>