force-app/main/default/objects/POSAccountAliases__c/fields/Reporting_Partner_Dates_Given__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Partner_Dates_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reporting Partner Dates Given</label>
    <type>Checkbox</type>
</CustomField>