force-app/main/default/objects/POSAccountAliases__c/fields/Reporting_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Partner_Type__c</fullName>
    <label>Pos Reporting Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Distribution</fullName>
            </value>
            <value>
                <fullName>National Reseller</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>