force-app/main/default/objects/POSAccountAliases__c/fields/Reports_End_User_Territory__c.field-meta.xml
<CustomField>
    <fullName>Reports_End_User_Territory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reports End User Territory</label>
    <type>Checkbox</type>
</CustomField>