force-app/main/default/objects/POSAccountAliases__c/fields/Reseller_Alias__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Alias__c</fullName>
    <label>Reseller Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>