force-app/main/default/objects/POSAccountAliases__c/fields/Reseller_Rating__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Rating__c</fullName>
    <formula>text(SFDC_Account__r.Rating)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Rating</label>
    <type>Text</type>
</CustomField>