force-app/main/default/objects/POSAccountAliases__c/fields/Reseller_State__c.field-meta.xml
<CustomField>
    <fullName>Reseller_State__c</fullName>
    <label>Reseller State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>