force-app/main/default/objects/POSAccountAliases__c/fields/SFDC_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Account_Owner__c</fullName>
    <formula>SFDC_Account__r.Owner.FirstName&amp;&apos; &apos;&amp; SFDC_Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFDC Account Owner</label>
    <type>Text</type>
</CustomField>