force-app/main/default/objects/POSAccountAliases__c/fields/SFDC_Account_Rank__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Account_Rank__c</fullName>
    <formula>SFDC_Account__r.Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFDC Account Rank</label>
    <type>Text</type>
</CustomField>