force-app/main/default/objects/POSAccountAliases__c/fields/sfdcCountofContacts__c.field-meta.xml
<CustomField>
    <fullName>sfdcCountofContacts__c</fullName>
    <formula>SFDC_Account__r.CountofContacts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sfdcCountofContacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>