force-app/main/default/objects/POSAccountAliases__c/fields/Ship_Region__c.field-meta.xml
<CustomField>
    <fullName>Ship_Region__c</fullName>
    <label>Ship Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>