force-app/main/default/objects/POSAccountAliases__c/fields/UpdateLastSeven__c.field-meta.xml
<CustomField>
    <fullName>UpdateLastSeven__c</fullName>
    <description>Alias or channel change in last seven days</description>
    <formula>if(
AV_Var_Channel_Updated__c &gt; today()-7, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UpdateLastSeven</label>
    <type>Checkbox</type>
</CustomField>