force-app/main/default/objects/POSAccountAliases__c/fields/VAR_Type__c.field-meta.xml
<CustomField>
    <fullName>VAR_Type__c</fullName>
    <formula>SFDC_Account__r.Reseller_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAR Type</label>
    <type>Text</type>
</CustomField>