force-app/main/default/objects/POSAccountAliases__c/fields/VAR_Type_del__c.field-meta.xml
<CustomField>
    <fullName>VAR_Type_del__c</fullName>
    <label>VAR Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>