force-app/main/default/objects/POSAccountAliases__c/fields/VS_Reporting_Partner__c.field-meta.xml
<CustomField>
    <fullName>VS_Reporting_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes that the account reports sales data and when distribution sales to this customer we need to eliminate sales from distribution to this customer</description>
    <label>VSReportingElmination</label>
    <type>Checkbox</type>
</CustomField>