force-app/main/default/objects/POSAccountAliases__c/fields/VSEliminatedPartner__c.field-meta.xml
<CustomField>
    <fullName>VSEliminatedPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes a partner, usually distribution where we remove this sales data from total sales when this parters sales to a reporting partner</description>
    <label>VSEliminatedPartner</label>
    <type>Checkbox</type>
</CustomField>