force-app/main/default/objects/POSAccountAliases__c/listViews/Consumer.listView-meta.xml
<ListView>
    <fullName>Consumer</fullName>
    <columns>NAME</columns>
    <columns>Account_Group__c</columns>
    <columns>DistributorAlias__c</columns>
    <columns>Reporting_Partner_Type__c</columns>
    <columns>End_User_Alias__c</columns>
    <columns>Reseller_Alias__c</columns>
    <columns>SFDC_Account__c</columns>
    <columns>National_Reporting__c</columns>
    <columns>Reporting_Parnter__c</columns>
    <columns>Channel__c</columns>
    <columns>Consumer_Account__c</columns>
    <columns>Assigned_Rep__c</columns>
    <columns>Reports_End_User_Territory__c</columns>
    <columns>Reporting_Frequency__c</columns>
    <columns>Reporting_Partner_Dates_Given__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>POSAccountAliases__c.Standard</value>
    </filters>
    <filters>
        <field>Consumer_Account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Consumer</label>
    <language>en_US</language>
</ListView>