force-app/main/default/objects/POSAccountAliases__c/listViews/Mapto_Acct_Pro_AVcar.listView-meta.xml
<ListView>
    <fullName>Mapto_Acct_Pro_AVcar</fullName>
    <columns>Reporting_Partner_Dates_Given__c</columns>
    <columns>NAME</columns>
    <columns>SFDC_Account__c</columns>
    <columns>Reseller_Alias__c</columns>
    <columns>DistributorAlias__c</columns>
    <columns>Assigned_Rep__c</columns>
    <columns>Parent__c</columns>
    <columns>Marketing_Firm__c</columns>
    <columns>National_Reporting__c</columns>
    <columns>Direct_Purchase_Reseller__c</columns>
    <columns>Channel__c</columns>
    <columns>Reporting_Parnter__c</columns>
    <columns>Consumer_Account__c</columns>
    <columns>Reports_End_User_Territory__c</columns>
    <columns>Disti_Pro_AV_Director__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>POSAccountAliases__c.Standard</value>
    </filters>
    <filters>
        <field>SFDC_Account__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Channel__c</field>
        <operation>equals</operation>
        <value>AV</value>
    </filters>
    <label>Mapto Acct Pro AVcar</label>
    <sharedTo>
        <roleAndSubordinates>VSA_US_Distribitution</roleAndSubordinates>
    </sharedTo>
</ListView>