force-app/main/default/objects/POSAccountAliases__c/listViews/ProAVAsscar.listView-meta.xml
<ListView>
    <fullName>ProAVAsscar</fullName>
    <columns>NAME</columns>
    <columns>SFDC_Account__c</columns>
    <columns>Reseller_Alias__c</columns>
    <columns>Channel__c</columns>
    <columns>Assigned_Rep__c</columns>
    <columns>DistributorAlias__c</columns>
    <columns>End_User_Alias__c</columns>
    <columns>Parent__c</columns>
    <columns>Marketing_Firm__c</columns>
    <columns>Reporting_Parnter__c</columns>
    <columns>Consumer_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>POSAccountAliases__c.Standard</value>
    </filters>
    <filters>
        <field>Assigned_Rep__c</field>
        <operation>contains</operation>
        <value>zach robinson</value>
    </filters>
    <label>Pro AVcar</label>
    <language>en_US</language>
</ListView>